--- a/src/admin/php.ini
+++ b/src/admin/php.ini
@@ -1,13 +1,14 @@
-max_execution_time = 300
-max_input_time = 150
+max_execution_time = 600
+max_input_time = 300
 max_input_vars = 2000
-memory_limit = 2048M
+memory_limit = 4096M
 error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
 display_errors = Off
 display_startup_errors = Off
 post_max_size = 2024M
 upload_max_filesize = 2024M
 max_file_uploads = 20
+imagick.skip_version_check = 1
 
 ;opcache.enable=1
 ;opcache.memory_consumption=128
@@ -17,18 +18,19 @@ max_file_uploads = 20
 ;opcache.fast_shutdown=1
 ;opcache.enable_cli=1
 
-extension=gd
-extension=memcached
-extension=iconv
-extension=mysqli
-zend_extension=opcache
-extension=pdo_mysql
-extension=pdo_sqlite
-extension=intl
+;extension=gd
+;extension=imagick
+;extension=memcached
+;extension=iconv
+;extension=mysqli
+;zend_extension=opcache
+;extension=pdo_mysql
+;extension=pdo_sqlite
+;extension=intl
 
 ;extension=curl
 ;extension=zip
-extension=soap
+;extension=soap
 
 ;zend_extension=xdebug
 ;xdebug.remote_enable=1
