--- a/src/core-php81/Dockerfile
+++ b/src/core-php81/Dockerfile
@@ -1,37 +1,46 @@
 FROM archlinux:latest
 
+#set mirror
+RUN echo "Server = https://mirror.yandex.ru/archlinux/\$repo/os/\$arch" >> /etc/pacman.d/mirrorlist
+
+#php repo
+RUN sed -Ei "s/default mirrors./default mirrors.\n\n[home_el_archphp_Arch]\nServer = https:\/\/download.opensuse.org\/repositories\/home:\/el:\/archphp\/Arch\/\$arch/g" /etc/pacman.conf && \
+    key=$(curl -fsSL https://download.opensuse.org/repositories/home:el:archphp/Arch/$(uname -m)/home_el_archphp_Arch.key) && \
+    fingerprint=$(gpg --quiet --with-colons --import-options show-only --import --fingerprint <<< "${key}" | awk -F: '$1 == "fpr" { print $10 }') && \
+    pacman-key --init && \
+    pacman-key --add - <<< "${key}" && \
+    pacman-key --lsign-key "${fingerprint}"
+
 #install system utils and services
 RUN pacman --needed --noconfirm -Syu && \
-    pacman --needed --noconfirm -S sudo git nano exim openssh base-devel unzip npm mariadb-clients mc iputils cronie inetutils \
-        wget tmux ruby python-pip fish libmemcached-awesome libreoffice ttf-liberation fuse2 fuse3 jdk11-openjdk supervisor && \
+    pacman --needed --noconfirm -S sudo git nano exim openssh base-devel unzip npm mariadb-clients mc iputils cronie inetutils wget tmux ruby python-pip libmemcached-awesome libreoffice ttf-liberation fuse2 fuse3 jdk11-openjdk supervisor && \
     yes | pacman -Scc && \
     useradd -m -s /bin/bash dev && \
     usermod -p "dev" dev && \
     echo 'dev ALL=(ALL) NOPASSWD: ALL' | EDITOR='tee -a' visudo && \
     sed -i "s/#MAKEFLAGS=\"-j2\"/MAKEFLAGS=\"-j12\"/g" /etc/makepkg.conf
 
-#install yay
-WORKDIR /home/dev/yay
-RUN chown dev:dev /home/dev/yay
-USER dev
-RUN git clone https://aur.archlinux.org/yay.git .; \
-    makepkg -scir --noconfirm; \
-    rm -rf /home/dev/yay
-
-WORKDIR /home/dev
-USER dev
-
-#install aur packages
-RUN yay --gpgflags "--keyserver hkp://keyserver.ubuntu.com" --answeredit n --answerdiff n --noconfirm --mflags --nocheck -S php81 php81-exif php81-fileinfo php81-ctype php81-pecl php81-pear php81-zip php81-xmlreader php81-xmlwriter php81-mbstring php81-openssl php81-xml php81-fpm php81-intl php81-sqlite php81-gd php81-xsl php81-simplexml php81-phar php81-tidy php81-cli php81-tokenizer php81-curl php81-opcache php81-iconv php81-mysql php81-pdo php81-soap php81-imagick && \
-    yes | yay -Scc && \
-    rm -rf /home/dev/.cache
-
-USER root
+#install php81
+RUN pacman --needed --noconfirm -S php81 php81-fileinfo php81-ctype php81-pecl php81-pear php81-zip php81-xmlreader php81-xmlwriter php81-mbstring php81-openssl php81-xml php81-fpm php81-intl php81-sqlite php81-gd php81-xsl php81-simplexml php81-phar php81-tidy php81-cli php81-tokenizer php81-curl php81-opcache php81-iconv php81-mysql php81-pdo php81-soap php81-imagick
 RUN pecl81 install timezonedb-2021.5 memcached && \
     echo extension=timezonedb.so > /etc/php81/conf.d/10-timezonedb.ini && \
     echo extension=memcached.so > /etc/php81/conf.d/10-memcached.ini
 
 USER dev
+WORKDIR /home/dev
+
+#install oh-my-bash
+RUN git clone https://aur.archlinux.org/oh-my-bash-git.git && \
+    cd oh-my-bash-git && \
+    makepkg -scir --nocheck --noconfirm --skipchecksums && \
+    rm -rf /home/dev/oh-my-bash-git
+
+#install blesh-git
+RUN git clone https://aur.archlinux.org/blesh-git.git && \
+    cd blesh-git && \
+    makepkg -scir --nocheck --noconfirm --skipchecksums && \
+    rm -rf /home/dev/blesh-git
+
 #install symfony-cli-bin
 RUN git clone https://aur.archlinux.org/symfony-cli-bin.git && \
     cd symfony-cli-bin && \
@@ -81,18 +90,7 @@ RUN wget -O drush.phar https://github.com/drush-ops/drush-launcher/releases/late
     mkdir -p /webcrate && \
     mkdir -p /webcrate-bin && \
     ln -s /bin/php81 /webcrate-bin/php && \
-    mkdir -p /webcrate-fish && \
     chmod o-rwx /webcrate
-
-#install fish
-WORKDIR /webcrate-fish/oh-my-fish
-RUN git clone https://github.com/oh-my-fish/oh-my-fish . && \
-    bin/install --offline --path=/webcrate-fish/omf --noninteractive --config=/webcrate-fish/omfconf && \
-    rm -rf ./* && \
-    cp /root/.config/fish/conf.d/omf.fish /etc/fish/conf.d/omf.fish && \
-    fish -C "omf install cbjohnson" && \
-    cp /webcrate-fish/omf/themes/default/functions/fish_right_prompt.fish /webcrate-fish/omf/themes/cbjohnson/fish_right_prompt.fish;
-COPY fish_prompt.fish /webcrate-fish/omf/themes/cbjohnson/fish_prompt.fish
 
 #install ioncucbe
 RUN wget https://downloads.ioncube.com/loader_downloads/ioncube_loaders_lin_x86-64.tar.gz && \
@@ -102,7 +100,6 @@ RUN wget https://downloads.ioncube.com/loader_downloads/ioncube_loaders_lin_x86-
     rm -f /root/ioncube_loaders_lin_x86-64.tar.gz
 
 WORKDIR /
-COPY ["fishrc.fish", "/etc/fish/conf.d/"]
 COPY ["bashrc.sh", "/etc/profile.d/"]
 COPY ["versions.py", "parse-projects.py", "sync_ssh_keys.sh", "log.py", "supervisord.conf.template", "/webcrate/"]
 COPY ["entrypoint.sh", "/"]
