fix&update admin

--- a/src/admin/php.ini
+++ b/src/admin/php.ini
@@ -8,6 +8,7 @@ display_startup_errors = Off
 post_max_size = 2024M
 upload_max_filesize = 2024M
 max_file_uploads = 20
+imagick.skip_version_check = 1
 
 ;opcache.enable=1
 ;opcache.memory_consumption=128
@@ -18,6 +19,7 @@ max_file_uploads = 20
 ;opcache.enable_cli=1
 
 extension=gd
+extension=igbinary
 extension=memcached
 extension=iconv
 extension=mysqli
