--- a/src/admin/Dockerfile
+++ b/src/admin/Dockerfile
@@ -1,9 +1,16 @@
 FROM archlinux:latest
 
+RUN sed -Ei "s/default mirrors./default mirrors.\n\n[home_el_archphp_Arch]\nServer = https:\/\/download.opensuse.org\/repositories\/home:\/el:\/archphp\/Arch\/\$arch/g" /etc/pacman.conf && \
+    key=$(curl -fsSL https://download.opensuse.org/repositories/home:el:archphp/Arch/$(uname -m)/home_el_archphp_Arch.key) && \
+    fingerprint=$(gpg --quiet --with-colons --import-options show-only --import --fingerprint <<< "${key}" | awk -F: '$1 == "fpr" { print $10 }') && \
+    pacman-key --init && \
+    pacman-key --add - <<< "${key}" && \
+    pacman-key --lsign-key "${fingerprint}"
+
 #update pacman db
 RUN pacman --needed --noconfirm -Syu && \
-    pacman --needed --noconfirm -S fakeroot binutils git nano openssh unzip composer npm mariadb-clients iputils inetutils which python-yaml python-munch python-setuptools nginx docker \
-    php php-fpm php-intl php-sqlite php-gd php-xsl php-tidy php-imagick php-memcached debugedit
+    pacman --needed --noconfirm -S fakeroot binutils git nano openssh unzip npm mariadb-clients iputils inetutils which python-yaml python-munch python-setuptools nginx docker \
+    php php-fpm php-intl php-sqlite php-gd php-xsl php-tidy php-imagick php-memcached php-igbinary debugedit
 
 #make automake bison binutils autoconf gcc patch
 RUN pacman --needed --noconfirm -S sudo;
@@ -21,17 +28,22 @@ WORKDIR /home/dev
 #install symfony-cli-bin
 RUN git clone https://aur.archlinux.org/symfony-cli-bin.git && \
     cd symfony-cli-bin && \
-    makepkg -scir --nocheck --noconfirm --skipchecksums
+    makepkg -scir --nocheck --noconfirm --skipchecksums && \
+    rm -rf /home/dev/symfony-cli-bin
 
 #install docker-systemctl-replacement-git
 RUN git clone https://aur.archlinux.org/docker-systemctl-replacement-git.git && \
     cd docker-systemctl-replacement-git && \
-    makepkg -scir --nocheck --noconfirm --skipchecksums
+    makepkg -scir --nocheck --noconfirm --skipchecksums && \
+    rm -rf /home/dev/docker-systemctl-replacement-git
 
 USER root
 
 RUN chown root:root /bin/systemctl.py && \
     chmod a+x /bin/systemctl.py && \
+    wget -O composer.phar https://getcomposer.org/download/latest-stable/composer.phar && \
+    chmod +x composer.phar && \
+    mv composer.phar /usr/bin/composer && \
     mv /bin/systemctl /bin/systemctl_original && \
     cp /bin/systemctl.py /bin/systemctl && \
     systemctl enable php-fpm && \
@@ -71,3 +83,4 @@ RUN chmod u+x /webcrate/init-db.py && \
     chmod a+rxs /webcrate/reload.py && \
     chmod a+rxs /webcrate/reload-redirect.py && \
     chmod u+x /entrypoint.sh
+EXPOSE 80
