add redis ext to core8.1

--- a/src/core-php81/Dockerfile
+++ b/src/core-php81/Dockerfile
@@ -27,9 +27,10 @@ RUN yay --gpgflags "--keyserver hkp://keyserver.ubuntu.com" --answeredit n --ans
     rm -rf /home/dev/.cache
 
 USER root
-RUN pecl81 install timezonedb-2021.5 memcached && \
+RUN pecl81 install timezonedb-2021.5 memcached redis && \
     echo extension=timezonedb.so > /etc/php81/conf.d/10-timezonedb.ini && \
-    echo extension=memcached.so > /etc/php81/conf.d/10-memcached.ini
+    echo extension=memcached.so > /etc/php81/conf.d/10-memcached.ini && \ 
+    echo extension=redis.so > /etc/php81/conf.d/10-redis.ini
 
 USER dev
 #install symfony-cli-bin
