--- a/src/core-php81/Dockerfile
+++ b/src/core-php81/Dockerfile
@@ -1,11 +1,13 @@
 FROM archlinux:latest
 
 #install system utils and services
+#use old openssh-9.6 which work with docker-systemctl-replacement
 RUN pacman --needed --noconfirm -Syu && \
     pacman -U --noconfirm https://archive.archlinux.org/packages/f/fakeroot/fakeroot-1.34-1-x86_64.pkg.tar.zst && \
-    pacman --needed --noconfirm -S sudo git nano exim openssh base-devel unzip npm mariadb-clients mc iputils cronie inetutils \
+    pacman --needed --noconfirm -S sudo git nano exim base-devel unzip npm mariadb-clients mc iputils cronie inetutils \
         wget tmux ruby python-pip fish libmemcached-awesome ttf-liberation fuse2 fuse3 jdk11-openjdk supervisor openssl-1.1 && \
         pacman -U --noconfirm https://archive.archlinux.org/packages/l/libreoffice-still/libreoffice-still-7.3.7-2-x86_64.pkg.tar.zst && \
+        pacman -U --noconfirm https://archive.archlinux.org/packages/o/openssh/openssh-9.6p1-1-x86_64.pkg.tar.zst && \
     yes | pacman -Scc && \
     useradd -m -s /bin/bash dev && \
     usermod -p "dev" dev && \
@@ -47,11 +49,6 @@ RUN git clone https://aur.archlinux.org/pdf2htmlex-appimage.git && \
     makepkg -scir --nocheck --noconfirm --skipchecksums && \
     rm -rf /home/dev/pdf2htmlex-appimage
 
-#install wkhtmltox(require openssl-1.1)
-RUN wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-3/wkhtmltox-0.12.6-3.archlinux-x86_64.pkg.tar.xz && \
-    tar -xf wkhtmltox-*.tar.xz -C / && \
-    rm -rf ./wkhtmltox-*
-
 #install docker-systemctl-replacement-git
 RUN git clone https://aur.archlinux.org/docker-systemctl-replacement-git.git && \
     cd docker-systemctl-replacement-git && \
@@ -61,6 +58,12 @@ RUN git clone https://aur.archlinux.org/docker-systemctl-replacement-git.git && 
 #misc install and config
 USER root
 WORKDIR /root
+
+#install wkhtmltox(require openssl-1.1)
+RUN wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-3/wkhtmltox-0.12.6-3.archlinux-x86_64.pkg.tar.xz && \
+    tar -xf wkhtmltox-*.tar.xz -C / && \
+    rm -rf ./wkhtmltox-*
+    
 RUN wget -O drush.phar https://github.com/drush-ops/drush-launcher/releases/latest/download/drush.phar && \
     chmod +x drush.phar && \
     mv drush.phar /usr/bin/drush && \
