add utils-libreoffice for docxtopdf convertion

--- a/.env-example
+++ b/.env-example
@@ -21,6 +21,7 @@ WEBCRATE_PROJECTS_FOLDERS=( "./var/projects01" "./var/projects02" "./var/project
 WEBCRATE_SERVICE_HTMLTOPDF=false
 WEBCRATE_SERVICE_DOCTOHTML=false
 WEBCRATE_SERVICE_STATS=false
+WEBCRATE_SERVICE_DOCXTOPDF=false
 
 WEBCRATE_FULL_BACKUP_DAYS=7
 WEBCRATE_MAX_FULL_BACKUPS=20
